Publish EGR 363 daily slides & video, published links to 363 PS#2 stuff 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM 	new file:   S23/363/DDB_TBX.ZIP 	new file:   S23/363/p2_1_starter.pdf

--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -95,16 +95,16 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  &nbsp;<!-- --</a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       &nbsp;<!-- --</a><!-- --><br><!-- --><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
+      "https://dordt.instructure.com/files/253416979/download?download_frd=1"><!-- -->
       1/13<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  --><a href="url.htm">V</A><!-- --></td>
+	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=3j9wTQYCxvo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>First day of class.</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Intro., Web page tour, Homework, Channel Capacity <font color=grey>First day of class.</font><!--end comment--></td>  
    </TR><!-- Week of 1/16 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
