Publishing slides, videos for 304, 363 today's class, fixing homework links 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM 	new file:   S23/304/304S23P01.docx 	new file:   S23/304/304S23P02.pdf 	modified:   S23/304/304S23PS.HTM

--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -44,7 +44,7 @@ DO {
 
          >DORDT UNIVERSITY ENGINEERING DEPARTMENT        </A><BR><B>
         EMBEDDED MICROCONTROLLER SYSTEMS--EGR 304<BR>
-                       (Spring 20203                     </B></P>
+                       (Spring 2023)                     </B></P>
 
                    <P style="text-align:center; margin-top: 10px; 
                                        margin-bottom: 0px;"><U><B
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/06/2020 3:38 pm)
+                              >(Last update: 1/13/2023 3:53 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -118,7 +118,7 @@ DO {
 		This assignment is designed to be worked mostly<br>&nbsp;
 		during the lab on Monday, 1/16.                   <br>&nbsp;
 		                                               <br>&nbsp;
-		<DO>Follow this</DO> <a href="304S20P02.pdf">guide</a>. <br>&nbsp;
+		<DO>Follow this</DO> <a href="304S23P02.pdf">guide</a>. <br>&nbsp;
 		Your finished work will be in d<small>DB</small>'s repo.<br>&nbsp;
 		No other work needs to be turned in.		
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
@@ -147,10 +147,10 @@ DO {
         "http://arduino.cc/en/Guide/HomePage"
              >Getting Started with Arduino.</a>         <br>&nbsp;
 		Briefly browse <a href=
-		"http://ww1.microchip.com/downloads/en/DeviceDoc/Atmel-7810-Automotive-Microcontrollers-ATmega328P_Datasheet.pdf"
+		"https://ww1.microchip.com/downloads/en/DeviceDoc/Atmel-7810-Automotive-Microcontrollers-ATmega328P_Datasheet.pdf"
 		              >this datasheet</a>.              <br>&nbsp;
 					                                    <br>&nbsp;
-        <DO>Do the</DO> <a href="304S20P01.docx"
+        <DO>Do the</DO> <a href="304S23P03.docx"
               >introductory problems</a>                <br>&nbsp;
         Note the microcontroller chip on the Arduino Uno<br>&nbsp;
         is part number "ATmega328P-PU"                  <br>&nbsp;
