Fix broken turn in link, 304, PS#1 	modified:   S23/304/304S23PS.HTM

--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -130,7 +130,7 @@ DO {
         1/13
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        <a href=""
+        <a href="https://dordt.instructure.com/courses/3642050/assignments/40099028"
 		>1/16</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
