--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -100,7 +100,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=3j9wTQYCxvo">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=3j9wTQYCxvo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
@@ -116,7 +116,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       1/20<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=9mIza6F9bUc">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=1qA_KVfqf3Q">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=1qA_KVfqf3Q">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Channel model, Experiment v. theory, signal models, intro matlab<!--end comment--><br>
