--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/27/2022 6:28 pm)
+                              >(Last update:  1/19/2023 1:44 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -108,9 +108,8 @@ PS                                                       </small>
         1/13<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        1/20
-		<!--<a href=""
-		>1/20</a>--><br>
+        <a href="https://dordt.instructure.com/courses/3642167/assignments/40247235"
+		>1/20</a><br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;
