--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   1/19/2023 1:44 pm)
+                              >(Last update:   1/19/2023 12:47 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -85,21 +85,23 @@ PS                                                       </small>
 
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
-&nbsp; 
+ 3
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;<br>
+        1/20<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        <a href=""
-		>&nbsp;</a><br>        
-   <!-- Returned -->        </TD><TD align="center" valign="top">
-        <a href=
-		""
-		>&nbsp;</a><br>        
+        1/27<!--<a href="https://dordt.instructure.com/courses/2899998/assignments/29080433"
+		>9/08</a><br>
+    <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		"https://dordt.instructure.com/files/184283387/download?download_frd=1"
+		>9/10</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        <br>&nbsp;
-        
+        Topics:  Linearity, convolution                <br>&nbsp;
+        Read Ch 2 Sec. 2.1                             <br>&nbsp;
+                                                       <br>&nbsp;
+        Do <DO>2.7, 2.16, 2.24, 2.28</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  2
