--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -111,18 +111,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/253721567/download?download_frd=1"><!-- -->
 	  1/16<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/253872823/download?download_frd=1"><!-- -->
-      1/18<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      1/20<!-- -></a><!-- --></td>
+      1/18<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/254069166/download?download_frd=1"><!-- -->
+      1/20<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=nn6D80iOrY8">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=4j9zY1QlD38">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=dhQcdtsZA2U">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->File version control, centralized, distributed, Intro to git 
 	  (Lab <a href="https://www.youtube.com/watch?v=nsB6v6vRA8U">video</a>)<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->git branch, meaning of HEAD, Introduction to I/O ports<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->parallel port--how it works, configure as input, output, tri-state<!--end comment--></td>  
    </TR><!-- Week of 1/23 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
