Publish slides and video for EGR 363 for today 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM

--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -124,19 +124,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Symmetry (even, odd, hermitian), power (watts v. watts relative to 1 &Omega;) <!--end comment--></td>  
    </TR><!-- Week of 1/23 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-	  1/23<!-- -></a><!-- --><br><!-- -><a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/254248853/download?download_frd=1"><!-- -->
+	  1/23<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       1/25<!-- -></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       1/27<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=LGMCYTZxRKQ">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Pwr complex signal, Time-avg pwr, Power &amp; Energy signals, Linear Sys<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 1/30 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
