--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/19/2023 12:55 pm)
+                              >(Last update: 1/24/2023 12:24 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -89,7 +89,8 @@ DO {
         1/20
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        1/27
+        <a href="https://dordt.instructure.com/courses/3642050/assignments/40297290"
+		>1/27</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
