--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   1/21/2023 5:25 pm)
+                              >(Last update:   1/24/2023 12:22 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -91,8 +91,8 @@ PS                                                       </small>
         1/20<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        1/27<!--<a href="https://dordt.instructure.com/courses/2899998/assignments/29080433"
-		>9/08</a><br>
+        <a href="https://dordt.instructure.com/courses/3642167/assignments/40297177"
+		>1/27</a><br>
     <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
 		"https://dordt.instructure.com/files/184283387/download?download_frd=1"
