Publish slides and videos for today's 363 class 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM

--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -128,17 +128,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0123.pdf"><!-- -->
 	  1/23<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0125.pdf"><!-- -->
-      1/25<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      1/27<!-- -></a><!-- --></td>
+      1/25<!-- --></a><!-- --><br><!-- --><a href=
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0127.pdf"><!-- -->
+      1/27<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=LGMCYTZxRKQ">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=-aKFgk6z6kc">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=odfoG4_7kr0">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Pwr complex signal, Time-avg pwr, Power &amp; Energy signals, Linear Sys<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->System types: linear, continuous, time invariant, causal, v. opposites<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Review sifting property of impulse, stair-step approx, intro convolution<!--end comment--></td>  
    </TR><!-- Week of 1/30 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
