Publish slides and video for EGR 304 today 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM

--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -129,17 +129,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/254259941/download?download_frd=1"><!-- -->
 	  1/23<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/254443105/download?download_frd=1"><!-- -->
-      1/25<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      1/27<!-- -></a><!-- --></td>
+      1/25<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/254553183/download?download_frd=1"><!-- -->
+      1/27<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=OfeWullAIic">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=h5m1g_L1o2I">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=6oSlabqMAhE">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->5 types of I/O, The word "Arduino", "Wiring" language, setup-loop<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Schematics of dev boards, labeling, pos/neg true I/O, I or V driven<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->FET and BJT load drivers, Inductive loads, Switch protection<!--end comment--></td>  
    </TR><!-- Week of 1/30 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
