Fix error in 304 ps#4 assignment 	modified:   S23/304/304S23PS.HTM

--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/30/2023 9:38 am)
+                              >(Last update: 1/30/2023 9:40 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -92,7 +92,7 @@ DO {
         1/31
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        2/03<!--<a href=
+        &nbsp;<!--<a href=
 		https://dordt.instructure.com/files/164083484/download?download_frd=1"
 		>2/12</a>-->
 		
