--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -144,18 +144,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/254702173/download?download_frd=1"><!-- -->
-	  1/30<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      2/01<!-- -></a><!-- --><br><!-- -><a href=
+	  1/30<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/254850505/download?download_frd=1"><!-- -->
+      2/01<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       2/03<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=j-M-vLg5mmA">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=6D5BBgWX5R4">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Controlling AC loads, Switch debounce--software v. hardware<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->dB, Sensors: modeling, precision, range, dynamic-range, accuracy<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
