--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/30/2023 9:40 am)
+                              >(Last update: 2/01/2023 5:05 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -89,7 +89,8 @@ DO {
         1/30
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        1/31
+        <a href="https://dordt.instructure.com/courses/3642050/assignments/40366937"
+		>2/03</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
