--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   1/30/2023 9:19 am)
+                              >(Last update:   2/01/2023 5:06m)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -92,8 +92,8 @@ PS                                                       </small>
         1/30<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        2/02<!--<a href="https://dordt.instructure.com/courses/2899998/assignments/29214333"
-		>9/15</a>--><br>
+        <a href="https://dordt.instructure.com/courses/3642167/assignments/40366945"
+		>2/03</a>--><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
 		"https://dordt.instructure.com/files/184284288/download?download_frd=1"
