--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   2/01/2023 5:06m)
+                              >(Last update:   2/02/2023 2:14pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -93,7 +93,7 @@ PS                                                       </small>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
         <a href="https://dordt.instructure.com/courses/3642167/assignments/40366945"
-		>2/03</a>--><br>
+		>2/03</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
 		"https://dordt.instructure.com/files/184284288/download?download_frd=1"
@@ -123,9 +123,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/3642167/assignments/40297177"
 		>1/27</a><br>
     <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/184283387/download?download_frd=1"
-		>9/10</a><br>
+        <a href=
+		"https://dordt.instructure.com/files/254953041/download?download_frd=1"
+		>2/02</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Linearity, convolution                <br>&nbsp;
         Read Ch 2 Sec. 2.1                             <br>&nbsp;
