--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -145,17 +145,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0130.pdf"><!-- -->
 	  1/30<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0201.pdf"><!-- -->
-      2/01<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      2/03<!-- -></a><!-- --></td>
+      2/01<!-- --></a><!-- --><br><!-- --><a href=
+      "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0203.pdf"><!-- -->
+      2/03<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=G89U1YJQeB0">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Mx2sfg9zbtg">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=9Y3YPe6sM-M">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->An example of convolution, Properties of convolution<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->A review of complex numbers<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Conclusion complex numbers, Intro transforms--change of perspective<!--end comment--></td>  
    </TR><!-- Week of 2/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
