--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   2/02/2023 2:14pm)
+                              >(Last update:   2/03/2023 9:46 am)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,77 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+ 5
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        9/15<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        &nbsp;<a href="https://dordt.instructure.com/courses/2899998/assignments/29348285"
+		>9/22</a><br>
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        <a href=
+		"https://dordt.instructure.com/files/184395484/download?download_frd=1"
+		>9/23</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Fourier Series                        <br>&nbsp;
+        Read Ch 2 Sec. 2.2                             <br>&nbsp;
+		                                               <br>&nbsp;
+        Do <DO>2.36, 2.39.1, 2.39.4</DO>                     <br>&nbsp;
+		                                               <br>&nbsp;
+		<b>Hints:</b>                                  <br>&nbsp;
+		For problem 2.36 the author expects you to let <br>&nbsp;
+		the basis signals equal zero outside of the    <br>&nbsp;
+		defined interval [&alpha;, &alpha; + <i>T<sub>0</sub></i>].<br>&nbsp;
+		                                               <br>&nbsp;
+		Slides xx and yy from <!--<a href=
+		""
+		-->2/06<!--</a>--> (expected) elaborate on the                   <br>&nbsp;
+		definition of the dot product of two signals.  <br>&nbsp;
+		These slides might be helpful in working       <br>&nbsp;
+		Problem 2.36.                           <br>&nbsp;
+		                                               <br>&nbsp;
+		<b>Divide-by-zero errors</b> are possible mistakes <br>&nbsp;
+		when working the F.S. analysis integral.  Do you<br>&nbsp;
+		see something like (2 &ndash; <i>n</i>) in a denominator? Then<br>&nbsp;
+		this solution is good only  if <i>n</i> &ne; 2. Handle the <br>&nbsp;
+		<i>n</i> = 2 case separately by substituting <i>n</i> = 2 early,   <br>&nbsp;
+		before the (2 &ndash; <i>n</i>) gets expressed in a denom. <br>&nbsp;
+		                                               <br>&nbsp;
+		Keep <b>Euler's rule</b> in mind.  Remember that com- <br>&nbsp;
+		plex exponentials can be written as cos() + <i>j</i>sin()<br>&nbsp;
+		or similar trigonometric forms and vice versa.  <br>&nbsp;
+		                                               <br>&nbsp;
+		Terms like <b>cos(2<img src="pi.gif" alt=&pi;><i>n</i>) can be reduced</b>.<br>&nbsp;
+		cos(2<img src="pi.gif" alt=&pi;><i>n</i>) = 1 for all <i>n</i>         <br>&nbsp;
+		                                               <br>&nbsp;
+		Terms like <b>cos(<img src="pi.gif" alt=&pi;><i>n</i>) can be reduced</b> to<br>&nbsp;
+		cos(<img src="pi.gif" alt=&pi;><i>n</i>) = (&ndash;1)<sup>n</sup><br>&nbsp;
+		                                               <br>&nbsp;
+		Similar maneuvers can be made with sin()  <br>&nbsp;
+		functions involving multiples of <img src="pi.gif" alt=&pi;>.<br>&nbsp;
+		                                               <br>&nbsp;
+		In the answer for <b>2.39.1</b>, <i>x<sub>n</sub></i> = 0 for most <i>n</i> but <br>&nbsp;
+		not every <i>n</i>.                            <br>&nbsp;
+		                                               <br>&nbsp;
+		The answer for <b>2.39.4</b> for odd <i>n</i> can be  <br>&nbsp;
+		expressed in the form (integer)/(<i>pn</i>)<sup>2</sup>.  Here <i>p</i> is<br>&nbsp;
+		a real constant and <i>n</i> is the harmonic number.<br>&nbsp;
+		If <i>n</i> is even but not zero, then <i>x<sub>n</sub></i> equals a "special <br>&nbsp;
+		integer." If <i>n</i> = 0, then <i>x<sub>n</sub></i> = <i>x<sub>0</sub></i> = a rational number.<br>&nbsp;
+		                                               <br>&nbsp;
+		<b>Note: errata on textbook page 107, Prob. 2.38</b><br>&nbsp;
+		This problem is not assigned, but an error in  <br>&nbsp;
+		this problem statement could be confusing when <br>&nbsp;
+		working Problem 2.36. In the first integral in <br>&nbsp;
+		the problem statement of problem 2.38 the "1"  <br>&nbsp;
+		and the "0" are interchanged from where they   <br>&nbsp;
+		should be.  The integral evaluates to 0 if <i>i</i> &ne; <i>j</i>    <br>&nbsp;
+		and it evaluates to 1 if <i>i</i> = <i>j</i>   <br>&nbsp;
+                                                       <br>&nbsp;
+		The problems stated mostly as <a href= "363S23PS5_stories.HTM">word problems</a>.   											   
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  4
