--- a/S23/304/304S23DN_InfinityFree.HTM
+++ b/S23/304/304S23DN_InfinityFree.HTM
@@ -146,17 +146,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0130.pdf"><!-- -->
 	  1/30<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0201.pdf"><!-- -->
-      2/01<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      2/03<!-- -></a><!-- --></td>
+      2/01<!-- --></a><!-- --><br><!-- --><a href=
+      "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0203.pdf"><!-- -->
+      2/03<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=j-M-vLg5mmA">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=6D5BBgWX5R4">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=46aH8WyyE4U">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Controlling AC loads, Switch debounce--software v. hardware<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->dB, Sensors: modeling, precision, range, dynamic-range, accuracy<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->dB and loudness, v and i sources, single-ended v. differential sources<!--end comment--></td>  
    </TR><!-- Week of 2/06 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
