Updated CV with teaching role for S23 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -147,7 +147,12 @@
         Partial retirement, teaching only one or two courses per semester<br>
 		<i>August 2017 through August, 2021</i><br><br>
 		
-		Full retirement, <i>August, 2021</i><br>    
+		Full retirement, <i>August, 2021 through December 2022</i><br><br>
+		
+		Returned to teaching two courses and a lab<br>
+		<i>Spring semester, January 2023 through May 2023</i><br><br>
+		
+		Full retirement again (anticipated) <i>June 2023</i><br>		
             <BR><BR></DIV>
     </TD>
 </TR>
@@ -829,7 +834,7 @@
 		understand that prior to May 13, 2019 the institution was known as 
 		"Dordt College."<br><br>
 
-		n July 10, 2019 "Calvin College" changed its name to "Calvin University"  
+		On July 10, 2019 "Calvin College" changed its name to "Calvin University"  
 		The name change was only symbolic.  There was no change in ownership, 
 		governance, administration, or status of accreditation when this happened.
 		For this reason, all references to this institution in this document 
@@ -846,7 +851,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 10/1/2022)</small></DIV>
+         <small>(This page last updated on 2/03/2023)</small></DIV>
     </TD>
 </TR>
 
