Updated lists of courses taught to include 304, 363 in S23 	modified:   ddb_courses.html 	modified:   index.html

--- a/ddb_courses.html
+++ b/ddb_courses.html
@@ -140,6 +140,7 @@
 		 
 		EGR 304, Embedded Microcontroller Systems (with a lab)<br>
 		Prior to spring of 2008 this course was titled "Microprocessor Interfacing."<br>
+		<a href="S23/304S23.HTM">S23</a>, 
 		<a href="S20/304S20.HTM">S20</a>, 
 		<a href="S17/304S17.HTM">S17</a>, 
 		<a href="S16/304S16.HTM">S16</a>, 
@@ -206,6 +207,7 @@
 		S01, F97, F95, F94, S91<br><br>
 		
 		EGR 363, Introduction to Communication Systems<br>
+		<a href="S23/363S23.HTM">S23</a>,
 		<a href="F20/363F20.HTM">F20</a>,
 		<a href="F19/363F19.HTM">F19</a>,
 		<a href="F17/363F17.HTM">F17</a>,
@@ -287,7 +289,7 @@
         <HR><p>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 5/26/2021)</small></P>
+         <small>(This page last updated on 2/03/2023)</small></P>
     </TD>
 </TR>
 
