--- a/index.html
+++ b/index.html
@@ -124,29 +124,29 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 
 <Blockquote><font face="verdana" size="2">
 <!--EGR 323 with lab-->
+     <A HREF="S23/363S23.HTM" 
+     >EGR &nbsp; &nbsp;363&nbsp; Introduction to Communication Systems</A><br>
+
      <a href="S21/323S21.HTM"
-     >EGR 323&nbsp; Electronics II (with a lab)</a><br>
+     >EGR &nbsp; &nbsp;323&nbsp; Electronics II (with a lab)</a><br>
      
      <A HREF="F20/322F20.HTM"
-     >EGR 322&nbsp; Electronics I (with a lab)</A><br>
+     >EGR &nbsp; &nbsp;322&nbsp; Electronics I (with a lab)</A><br>
 	 
-     <A HREF="F20/363F20.HTM" 
-     >EGR 363&nbsp; Introduction to Communication Systems</A><br>
+     <A HREF="S23/304S23.HTM"
+     >EGR &nbsp; &nbsp;304&nbsp; Embedded Microcontroller Systems (with a lab)</A><br>
 
-     <A HREF="S20/304S20.HTM"
-     >EGR 304&nbsp; Embedded Microcontroller Systems (with a lab)</A><br>
+     <A HREF="S18/220S18.HTM" style="text-decoration: none"
+     >EGR &nbsp; &nbsp;220&nbsp; Linear Circuits and Electronics (with a lab)</A><br>
 
      <a href="F19/204F19.HTM"
-     >EGR 204&nbsp; Microprocessors and Digital Circuits (with a lab)</A><br>
+     >EGR &nbsp; &nbsp;204&nbsp; Microprocessors and Digital Circuits (with a lab)</A><br>
 
      <A HREF="S19/170S19.HTM"
-     >EGR 170&nbsp; Engineering Programming</A><br>
+     >EGR &nbsp; &nbsp;170&nbsp; Engineering Programming</A><br>
 	 
-     <A HREF="S18/220S18.HTM" style="text-decoration: none"
-     >EGR 220&nbsp; Linear Circuits and Electronics (with a lab)</A><br>
-
      <A HREF="F16/117F16.HTM" 
-     >EGR 117&nbsp; Introduction to Engineering: Electronics</A><br>
+     >EGR &nbsp; &nbsp;117&nbsp; Introduction to Engineering: Electronics</A><br>
 
      <A HREF="F16/M204F16.HTM"
      >MATH 204&nbsp; Differential Equations</A><br>
@@ -381,7 +381,7 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 
 <br><br><br>
 <HR width = 20% align = "left">
-<small>This page last edited on 9/03/2021.</small><BR><br><br>&nbsp;
+<small>This page last edited on 2/03/2023.</small><BR><br><br>&nbsp;
  
 
 </DIV></TD></TR>
