--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   2/03/2023 9:46 am)
+                              >(Last update:   2/04/2023 3:48 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -88,15 +88,15 @@ PS                                                       </small>
  5
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        9/15<br>
+        2/03<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;<a href="https://dordt.instructure.com/courses/2899998/assignments/29348285"
-		>9/22</a><br>
+        <a href="https://dordt.instructure.com/courses/2899998/assignments/29348285"
+		>2/10</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        <a href=
+        &nbsp;<!--<a href=
 		"https://dordt.instructure.com/files/184395484/download?download_frd=1"
-		>9/23</a><br>        
+		>9/23--></a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Fourier Series                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
@@ -110,10 +110,10 @@ PS                                                       </small>
 		                                               <br>&nbsp;
 		Slides xx and yy from <!--<a href=
 		""
-		-->2/06<!--</a>--> (expected) elaborate on the                   <br>&nbsp;
-		definition of the dot product of two signals.  <br>&nbsp;
-		These slides might be helpful in working       <br>&nbsp;
-		Problem 2.36.                           <br>&nbsp;
+		-->2/06<!--</a>--> (expected) elaborate        <br>&nbsp;
+		on the definition of the dot product of two    <br>&nbsp;
+		signals. These slides might be helpful in      <br>&nbsp;
+		working Problem 2.36.                          <br>&nbsp;
 		                                               <br>&nbsp;
 		<b>Divide-by-zero errors</b> are possible mistakes <br>&nbsp;
 		when working the F.S. analysis integral.  Do you<br>&nbsp;
@@ -166,9 +166,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/3642167/assignments/40366945"
 		>2/03</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/184284288/download?download_frd=1"
-		>9/15</a>--><br>        
+        <a href=
+		"https://dordt.instructure.com/files/255046067/download?download_frd=1"
+		>2/04</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Linearity, convolution                <br>&nbsp;
         Read Ch 2 Sec. 2.1                             <br>&nbsp;
