--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   2/04/2023 3:48 pm)
+                              >(Last update:   2/08/2023 7:58 am)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -108,9 +108,9 @@ PS                                                       </small>
 		the basis signals equal zero outside of the    <br>&nbsp;
 		defined interval [&alpha;, &alpha; + <i>T<sub>0</sub></i>].<br>&nbsp;
 		                                               <br>&nbsp;
-		Slides xx and yy from <!--<a href=
-		""
-		-->2/06<!--</a>--> (expected) elaborate        <br>&nbsp;
+		Slides 2 and 3 from <a href=
+		"https://dordt.instructure.com/files/255116160/download?download_frd=1"
+		-->2/06</a> elaborate        <br>&nbsp;
 		on the definition of the dot product of two    <br>&nbsp;
 		signals. These slides might be helpful in      <br>&nbsp;
 		working Problem 2.36.                          <br>&nbsp;
