publish slides, video for 363 for today.  Also correcting a broken link in many errata files as time is available. 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM 	modified:   errata/Alexander_Sadiku/4th/A_S_4_ER.HTM 	modified:   errata/Alexander_Sadiku/5th/A_S_5_ER.HTM 	modified:   errata/Alexander_Sadiku/6th/A_S_6_ER.HTM 	modified:   errata/Attaway/4th/A_4_ER.HTM 	modified:   errata/Attaway/5th/A_5_ER.HTM 	modified:   errata/Blanchard_Devaney_Hall/4th/BDH_4_ERR.HTM 	modified:   errata/DeBoer/DB_08_ER.HTM 	modified:   errata/DeBoer/DB_09_ER.HTM 	modified:   errata/DeBoer/DB_10_ER.HTM 	modified:   errata/Dorf_Svoboda/6th/D_S_6_ER.HTM 	modified:   errata/Dorf_Svoboda/7th/D_S_7_ER.HTM 	modified:   errata/Essick/4th/E_4_ER.HTM 	modified:   errata/Proakis_Salehi/2nd/P_S_2_ER.HTM 	modified:   errata/Proakis_Salehi/P_S_ER.HTM

--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -162,17 +162,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/255116160/download?download_frd=1"><!-- -->
 	  2/06<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/255257482/download?download_frd=1"><!-- -->
-      2/08<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      2/10<!-- -></a><!-- --></td>
+      2/08<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/255431917/download?download_frd=1"><!-- -->
+      2/10<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=-80hhmKyYWc">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=x9Xp7jM8SZ8">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=Tbkyg3o5iMs">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=puqSwKGju-M">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Introduction to Fourier Series, The Quintessential Example<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Spectrograms, F.S. of a cosine, Disscussion: appliation of F.S. to photos<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->F.S. of common signals, Exponential, Trigonometric, Compact F.S.<!--end comment--></td>  
    </TR><!-- Week of 2/13 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -<a href=
