--- a/errata/Alexander_Sadiku/4th/A_S_4_ER.HTM
+++ b/errata/Alexander_Sadiku/4th/A_S_4_ER.HTM
@@ -36,7 +36,7 @@
 <p align="center">
 <P align="center"><A 
 HREF="../../../index.html">
-                   Professor De Boer</A>'s list of<br><a href="../../err.htm" 
+                   Professor De Boer</A>'s list of<br><a href="../../ERR.HTM" 
                        >TEXTBOOK ERRATA</a><br>
                     (last update 1/28/2017)<br>
                                <br>
