--- a/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
+++ b/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
@@ -46,7 +46,7 @@
 <P align="center">
 <A 
 HREF="../../../index.html">
-                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
+                   Professor De Boer</A>'s list of<br><a href="../../../errata/ERR.HTM"> 
                        TEXTBOOK ERRATA</a><br>
                     (last update 11/05/2018)<br>
                                <br>
