--- a/errata/Dorf_Svoboda/6th/D_S_6_ER.HTM
+++ b/errata/Dorf_Svoboda/6th/D_S_6_ER.HTM
@@ -23,7 +23,7 @@
 
 <p align="center">
 <A HREF="../../../index.html">
-                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
+                   Professor De Boer</A>'s list of<br><a href="../../../errata/ERR.HTM"> 
                        TEXTBOOK ERRATA</a><br>
                     (last update 1/06/2010)<br>
                                <br>
