--- a/errata/Dorf_Svoboda/7th/D_S_7_ER.HTM
+++ b/errata/Dorf_Svoboda/7th/D_S_7_ER.HTM
@@ -21,7 +21,7 @@ A:hover {
 <BODY>
 <table align="center" width=504><tr><td width="504">
 <P align="center"><A HREF="../../../index.html">
-                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
+                   Professor De Boer</A>'s list of<br><a href="../../../errata/ERR.HTM"> 
                        TEXTBOOK ERRATA</a><br>
                     (last update  1/06/2010)<br>
                                <br>
