--- a/errata/Proakis_Salehi/P_S_ER.HTM
+++ b/errata/Proakis_Salehi/P_S_ER.HTM
@@ -12,7 +12,7 @@ A:hover {text-decoration:underline;}
 <table align="center" width="504"><tr><td width="504">
 <p align="center">
 <A HREF="../../index.html">
-                   Professor De Boer</A>'s list of<br><a href="../../ERRATA/err.htm"> 
+                   Professor De Boer</A>'s list of<br><a href="../../errata/ERR.htm"> 
                        TEXTBOOK ERRATA</a><br>
                     (last update 1/30/2012)<br>
                        
@@ -81,7 +81,7 @@ Page 106, Problem 2.6 part 2 and following</b><br>
    (The authors do not intend to refer back to parts 1 and 2
    of this problem.  They instead wish to refer to any general
    even and odd pair of functions.  Also, the subtraction sign
-   in this problem statement is not an error.) <br><br><small><i>
+   in this problem statement is not an error.) <br><br><i>
    
    Updated 1/30/2012.                                </i></small>
                                                     </blockquote>
