--- a/errata/Attaway/5th/A_5_ER.HTM
+++ b/errata/Attaway/5th/A_5_ER.HTM
@@ -12,7 +12,7 @@ A:visited {color: #CC9900; font-weight:bold;
 <table align="center" width=504><tr><td width="504">
 <P align="center"><A 
 HREF="../../../index.html">
-                   Professor De Boer</A>'s list of<br><a href="../../err.htm"
+                   Professor De Boer</A>'s list of<br><a href="../../ERR.HTM"
                        >TEXTBOOK ERRATA</a><br>
                     (last update 1/02/2019)<br>
                                <br>
