--- a/errata/Blanchard_Devaney_Hall/4th/BDH_4_ERR.HTM
+++ b/errata/Blanchard_Devaney_Hall/4th/BDH_4_ERR.HTM
@@ -24,7 +24,7 @@
 <p align="center">
 <P align="center"><A 
 HREF="../../../index.html">
-                   Professor De Boer</A>'s list of<br><a href="../../err.htm">
+                   Professor De Boer</A>'s list of<br><a href="../../ERR.HTM">
                        TEXTBOOK ERRATA</a><br>
                  (last update  9/06/2016)<br><br>
 
