--- a/errata/DeBoer/DB_09_ER.HTM
+++ b/errata/DeBoer/DB_09_ER.HTM
@@ -22,7 +22,7 @@ A:hover {
 <table align="center" width=504><tr><td width="504">
 <P align="center">
 <A HREF="../../index.html">
-                   Professor De Boer</A>'s list of<br><a href="../../ERRATA/err.htm"> 
+                   Professor De Boer</A>'s list of<br><a href="../../errata/ERR.HTM"> 
                        TEXTBOOK ERRATA</a><br>
                     (last update  4/06/2009)<br>
                                 <br>
