--- a/errata/DeBoer/DB_10_ER.HTM
+++ b/errata/DeBoer/DB_10_ER.HTM
@@ -22,7 +22,7 @@ A:hover {
 <table align="center" width=504><tr><td width="504">
 <P align="center"><A 
 HREF="../../../index.html">
-                   Professor De Boer</A>'s list of<br><a href="../../err.htm">
+                   Professor De Boer</A>'s list of<br><a href="../../ERR.HTM">
 <a href="../err.htm"> 
                        TEXTBOOK ERRATA</a><br>
                     (last update  1/05/2010)<br>
