--- a/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
+++ b/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
@@ -12,7 +12,7 @@ A:hover {text-decoration:underline;}
 <table align="center" width="504"><tr><td width="504">
 <p align="center">
 <A HREF="../../../index.html">
-                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm" 
+                   Professor De Boer</A>'s list of<br><a href="../../../errata/ERR.htm" 
                        >TEXTBOOK ERRATA</a><br>
                        (last update 11/16/2020)<br>
                                <br>
