Added due date to PS#6 in 363 	modified:   S23/363/363S23PS.HTM

--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   2/09/2023 10:23 pm)
+                              >(Last update:   2/13/2023 7:47 am)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -85,13 +85,13 @@ PS                                                       </small>
 
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
- &nbsp;
+ 6
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;<br>
+        2/13<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href="https://dordt.instructure.com/courses/2899998/assignments/29450020"
+        2/17<!--<a href="https://dordt.instructure.com/courses/2899998/assignments/29450020"
 		>10/06</a><br>-->
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
