Publish slides, video for 363 today, also the turnin link for PS#6 of 363 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM 	modified:   S23/363/363S23PS.HTM

--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -175,19 +175,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->F.S. of common signals, Exponential, Trigonometric, Compact F.S.<!--end comment--></td>  
    </TR><!-- Week of 2/13 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- -<a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-	  2/13<!-- -</a><!-- --><br><!-- -><a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/255581293/download?download_frd=1"><!-- -->
+	  2/13<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       2/15<!-- -></a><!-- --><br><!-- -<a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       2/17<!-- -</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=SYgmfqa1ouU">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Properties of Fourier Series, Parseval's Theorem<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Test #1.</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
