Publish solutions to 363 PS#5 	modified:   S23/363/363S23PS.HTM

--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   2/13/2023 9:23 am)
+                              >(Last update:   2/14/2023 6:09 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -142,9 +142,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/3642167/assignments/40407509"
 		>2/10</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/184395484/download?download_frd=1"
-		>9/23--></a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/255715150/download?download_frd=1"
+		>2/14</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Fourier Series                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
